<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="login"
            type="com.buahbatu.okarta.LoginActivity"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        tools:context="com.buahbatu.okarta.LoginActivity">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ProgressBar
                android:visibility="@{login.progressBarVisibility}"
                android:layout_marginBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/logo_jantung"
                android:layout_gravity="center"
                android:src="@mipmap/ic_car_2"
                android:padding="64dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username_hint"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:onClick="@{() -> login.onLoginClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"/>
        <Button
            android:onClick="@{() -> login.onRegisterClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/register_button"/>

    </LinearLayout>
</layout>