<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="register"
            type="com.buahbatu.okarta.RegisterActivity"/>
    </data>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.buahbatu.okarta.RegisterActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:hint="@string/username_hint"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:imeOptions="actionNext"
                    android:hint="@string/password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:hint="@string/full_name_hint"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:hint="@string/car_type_hint"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_plat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:hint="@string/car_plat_hint"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_sensor_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:hint="@string/sensor_id_hint"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/button_select_image"
                android:src="@mipmap/ic_car_2"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/car_upload_button"
                android:onClick="@{() -> register.onImageSelectClick()}"
                android:layout_width="160dp"
                android:layout_height="160dp" />
            <Button
                android:visibility="@{register.progressBarVisibility == View.VISIBLE ? View.GONE : View.VISIBLE}"
                android:layout_marginBottom="12dp"
                android:onClick="@{() -> register.onRegisterClick()}"
                android:text="@string/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ProgressBar
                android:visibility="@{register.progressBarVisibility}"
                android:layout_marginBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>
</layout>