<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="main"
            type="com.buahbatu.okarta.MainActivity"/>
    </data>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            tools:context="com.buahbatu.okarta.MainActivity">

            <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:gravity="center"-->
            <!--android:visibility="@{main.loadingVisibility?View.VISIBLE : View.GONE}"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->
            <!--<ProgressBar-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
            <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:textSize="16sp"-->
            <!--android:text="@string/loading_data"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <android.support.v7.widget.CardView
                android:visibility="@{main.loadingVisibility?View.GONE : View.VISIBLE}"
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="12dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@{main.fullName}"
                        tools:text="Alif"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@{@string/car_format(main.carType, main.carPlat)}"
                        tools:text="Nissan Xenia"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@{main.sensorId}"
                        tools:text="Sensor Id"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="21dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription="@string/car_upload_button"
                    app:imageUrl="@{main.imageUrl}"
                    android:layout_width="match_parent"
                    android:scaleType="fitCenter"
                    android:layout_height="120dp" />
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:visibility="@{main.loadingVisibility? View.GONE : View.VISIBLE}"
                android:layout_marginTop="21dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:onClick="@{() -> main.moveToDetailActivity(`kampas`)}"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:padding="12dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:contentDescription="@string/option1"
                            android:src="@drawable/ic_break"
                            android:layout_width="match_parent"
                            android:layout_height="64dp" />
                        <TextView
                            android:textSize="16sp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/option1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:onClick="@{() -> main.moveToDetailActivity(`filter`)}"
                    app:cardElevation="3dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:padding="12dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:contentDescription="@string/option2"
                            android:src="@drawable/ic_cleaner"
                            android:layout_width="match_parent"
                            android:layout_height="64dp" />
                        <TextView
                            android:textSize="16sp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/option2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:visibility="@{main.loadingVisibility? View.GONE : View.VISIBLE}"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:onClick="@{() -> main.moveToDetailActivity(`aki`)}"
                    app:cardElevation="3dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:padding="12dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:contentDescription="@string/option1"
                            android:src="@drawable/ic_accu"
                            android:layout_width="match_parent"
                            android:layout_height="64dp" />
                        <TextView
                            android:textSize="16sp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/option3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:onClick="@{() -> main.moveToDetailActivity(`service`)}"
                    app:cardElevation="3dp"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:padding="12dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:contentDescription="@string/option2"
                            android:src="@drawable/ic_service"
                            android:layout_width="match_parent"
                            android:layout_height="64dp" />
                        <TextView
                            android:textSize="16sp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/option4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>